--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,6 +6,7 @@
 	box-shadow: 0px 2px 22.5px 0px #1C1D1F0D;
 	display: flex;
 	justify-content: center;
+	text-decoration: none;
 }
 
 .header__logo {
@@ -68,4 +69,11 @@
 	font-weight: 500;
 	font-size: 14px;
 	color: #0F0F1080
+}
+
+.active {
+	background-image: url('../../assets/Ellipse.svg');
+	width: 6px;
+	height: 6px;
+	color: black;
 }
